--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,8 @@ exposed_version=0.61.0
 h2_version=2.3.232
 kotlin_version=2.1.10
 ktor_version=3.2.0
-logback_version=1.4.14
+logback_version=1.5.13
 koin_version=4.1.0
 hikari_version=6.3.0
 swagger_version=2.2.0
+call_logging_version=3.2.0
