[SXPJB] Add simple Kafka produce/consume

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,3 +8,5 @@ koin_version=4.1.0
 hikari_version=6.3.0
 swagger_version=2.2.0
 call_logging_version=3.2.0
+arrow_version=2.1.2
+kafka_version=3.6.1
