--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,4 @@
 ktor {
-
   deployment {
     port = 8080
     port = ${?PORT}
@@ -8,6 +7,7 @@ ktor {
   application {
     modules = [com.fsociety.ktor.ideas.ApplicationKt.module]
   }
+
 }
 
 database {
@@ -15,4 +15,11 @@ database {
   jdbcUrl = "jdbc:h2:mem:test;DB_CLOSE_DELAY=-1"
   username = "test"
   password = "test"
+}
+
+kafka {
+  schemaRegistryUrl = "http://localhost:8081"
+  bootstrapServers = ["http://localhost:9093"]
+  clientId = "my-client-id"
+  retries = 1
 }
