[SXPJB] KtorKafkaPlugin - Implement a plugins for consumers

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -18,8 +18,11 @@ database {
 }
 
 kafka {
-  schemaRegistryUrl = "http://localhost:8081"
-  bootstrapServers = ["http://localhost:9093"]
+  bootstrapServers = "localhost:9093"
   clientId = "my-client-id"
   retries = 1
+  messageTopic = "message-topic"
+  userTopic = "user-topic"
+  userEventsTopic = "user-events-topic"
+  consumerGroupId = "ktor-ideas-consumer-group"
 }
