--- a/src/test/resources/application-test.conf
+++ b/src/test/resources/application-test.conf
@@ -15,3 +15,11 @@ database {
   username = "test"
   password = "test"
 }
+
+kafka {
+  bootstrapServers = "localhost:9093"
+  messageTopic = "message-topic"
+  userTopic = "user-topic"
+  userEventsTopic = "user-events-topic"
+  consumerGroupId = "ktor-ideas-consumer-group"
+}
