KtorKafkaPlugin - Create plugin to support multiple consumers

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,4 @@
 ktor {
-
   deployment {
     port = 8080
     port = ${?PORT}
@@ -8,6 +7,7 @@ ktor {
   application {
     modules = [com.fsociety.ktor.ideas.ApplicationKt.module]
   }
+
 }
 
 database {
@@ -15,4 +15,14 @@ database {
   jdbcUrl = "jdbc:h2:mem:test;DB_CLOSE_DELAY=-1"
   username = "test"
   password = "test"
+}
+
+kafka {
+  bootstrapServers = "localhost:9093"
+  clientId = "my-client-id"
+  retries = 1
+  messageTopic = "message-topic"
+  userTopic = "user-topic"
+  userEventsTopic = "user-events-topic"
+  consumerGroupId = "ktor-ideas-consumer-group"
 }
